--- a/yarn/package.json
+++ b/yarn/package.json
@@ -5,6 +5,8 @@
   },
   "description": "Renovate testbed",
   "devDependencies": {
+    "@types/lodash.memoize": "4.1.0",
+    "@types/lodash.once": "4.1.0",
     "ts-node": "^7.0.0",
     "tsconfig-seek": "1.0.1",
     "typescript": "2.9.1"
