--- a/npm/package.json
+++ b/npm/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "apollo-server-koa": "2.4.0",
     "lodash.memoize": "4.1.1",
     "lodash.once": "^4.0.0"
   },
   "description": "Renovate testbed",
   "devDependencies": {
+    "apollo-server": "2.4.0",
     "@types/lodash.memoize": "4.1.0",
     "@types/lodash.once": "4.1.0",
     "ts-node": "^7.0.0",
