Add in a little Yarn

--- a/renovate.json5
+++ b/renovate.json5
@@ -6,32 +6,32 @@
 
       extends: ['github>seek-oss/rynovate'],
     },
-    // {
-    //   paths: ['yarn/**'],
+    {
+      paths: ['yarn/**'],
 
-    //   extends: [
-    //     ':prHourlyLimit2',
-    //     ':prNotPending',
-    //     ':rebaseStalePrs',
-    //     ':semanticCommits',
-    //     ':timezone(Australia/Melbourne)',
-    //     ':updateNotScheduled',
-    //     'preview:buildkite',
-    //     'preview:dockerCompose',
-    //     'docker:disableMajor',
-    //   ],
-    //   branchPrefix: 'renovate-template/',
-    //   commitMessageAction: '',
-    //   ignoreNpmrcFile: true,
-    //   lazyGrouping: false,
-    //   postUpdateOptions: ['yarnDedupeHighest'],
-    //   prConcurrentLimit: 3,
-    //   prNotPendingHours: 1,
-    //   rangeStrategy: 'auto',
-    //   schedule: 'before 7am on every weekday',
-    //   semanticCommitScope: 'template',
-    //   semanticCommitType: 'fix',
-    // },
+      extends: [
+        ':prHourlyLimit2',
+        ':prNotPending',
+        ':rebaseStalePrs',
+        ':semanticCommits',
+        ':timezone(Australia/Melbourne)',
+        ':updateNotScheduled',
+        'preview:buildkite',
+        'preview:dockerCompose',
+        'docker:disableMajor',
+      ],
+      branchPrefix: 'renovate-template/',
+      commitMessageAction: '',
+      ignoreNpmrcFile: true,
+      lazyGrouping: false,
+      postUpdateOptions: ['yarnDedupeHighest'],
+      prConcurrentLimit: 3,
+      prNotPendingHours: 1,
+      rangeStrategy: 'auto',
+      schedule: 'before 7am on every weekday',
+      semanticCommitScope: 'template',
+      semanticCommitType: 'fix',
+    },
     // {
     //   managers: ['buildkite', 'gomod', 'npm', 'nvm'],
     //   paths: ['yarn/**'],
