--- a/renovate.json5
+++ b/renovate.json5
@@ -7,7 +7,9 @@
     // },
     {
       // paths: ['yarn/**'],
+
       managers: ['buildkite', 'gomod', 'npm', 'nvm'],
+      packagePatterns: ['*'],
 
       extends: [
         ':prHourlyLimit2',
