What is going on

--- a/renovate.json5
+++ b/renovate.json5
@@ -8,31 +8,31 @@
     {
       // paths: ['yarn/**'],
 
-      managers: ['buildkite', 'gomod', 'npm', 'nvm'],
+      // managers: ['buildkite', 'gomod', 'npm', 'nvm'],
       packagePatterns: ['*'],
 
-      extends: [
-        ':prHourlyLimit2',
-        ':prNotPending',
-        ':rebaseStalePrs',
-        ':semanticCommits',
-        ':timezone(Australia/Melbourne)',
-        ':updateNotScheduled',
-        'preview:buildkite',
-        'preview:dockerCompose',
-        'docker:disableMajor',
-      ],
+      // extends: [
+      //   ':prHourlyLimit2',
+      //   ':prNotPending',
+      //   ':rebaseStalePrs',
+      //   ':semanticCommits',
+      //   ':timezone(Australia/Melbourne)',
+      //   ':updateNotScheduled',
+      //   'preview:buildkite',
+      //   'preview:dockerCompose',
+      //   'docker:disableMajor',
+      // ],
       branchPrefix: 'renovate-template/',
-      commitMessageAction: '',
-      ignoreNpmrcFile: true,
-      lazyGrouping: false,
-      postUpdateOptions: ['yarnDedupeHighest'],
-      prConcurrentLimit: 3,
-      prNotPendingHours: 1,
-      rangeStrategy: 'auto',
-      schedule: 'before 7am on every weekday',
-      semanticCommitScope: 'template',
-      semanticCommitType: 'fix',
+      // commitMessageAction: '',
+      // ignoreNpmrcFile: true,
+      // lazyGrouping: false,
+      // postUpdateOptions: ['yarnDedupeHighest'],
+      // prConcurrentLimit: 3,
+      // prNotPendingHours: 1,
+      // rangeStrategy: 'auto',
+      // schedule: 'before 7am on every weekday',
+      // semanticCommitScope: 'template',
+      // semanticCommitType: 'fix',
     },
     // {
     //   managers: ['buildkite', 'gomod', 'npm', 'nvm'],
