--- a/yarn/package.json
+++ b/yarn/package.json
@@ -1,8 +1,6 @@
 {
   "dependencies": {
-    "aws-sdk": "^2.511.0",
-    "lodash.memoize": "^4.1.1",
-    "lodash.once": "^4.0.0"
+    "lodash.memoize": "4.1.1"
   },
   "description": "Renovate testbed",
   "devDependencies": {
