--- a/renovate.json5
+++ b/renovate.json5
@@ -1,5 +1,12 @@
 {
-  extends: ['github>seek-oss/rynovate'],
-
-  semanticCommitType: 'deps',
+  packageRules: [
+    {
+      packagePatterns: ['**'],
+      extends: ['github>seek-oss/rynovate'],
+    },
+    {
+      packagePatterns: ['**'],
+      semanticCommitType: 'deps',
+    },
+  ],
 }
