--- a/renovate.json5
+++ b/renovate.json5
@@ -1,11 +1,11 @@
 {
   packageRules: [
     {
-      packagePatterns: ['**'],
+      packagePatterns: ['*'],
       extends: ['github>seek-oss/rynovate'],
     },
     {
-      packagePatterns: ['**'],
+      packagePatterns: ['*'],
       semanticCommitType: 'deps',
     },
   ],
