--- a/renovate.json5
+++ b/renovate.json5
@@ -136,7 +136,7 @@
     {
       "automerge": true,
       "prPriority": 99,
-      "schedule": "every 2 weeks on Wednesday",
+      "schedule": "before 3:00 am every 2 weeks on Wednesday",
       "updateTypes": ["lockFileMaintenance"]
     },
     {
