--- a/renovate.json5
+++ b/renovate.json5
@@ -17,7 +17,6 @@
       "excludePackageNames": ["seek-jobs/gantry"],
       "groupName": "all dependencies",
       "recreateClosed": true,
-      "schedule": "before 7am on Monday",
       "semanticCommitType": "fix",
       "updateTypes": [
         "bump",
@@ -33,12 +32,13 @@
       "commitMessageAction": "",
       "commitMessageExtra": "{{newValue}}",
       "commitMessageTopic": "{{depName}}",
-      "packageNames": ["seek-jobs/gantry"]
+      "packageNames": ["seek-jobs/gantry"],
+      "schedule": "before 6:00 am on every weekday"
     },
     {
       "automerge": true,
       "prPriority": 99,
-      "schedule": "every 2 weeks on Wednesday",
+      "schedule": "before 3:00 am every 2 weeks on Wednesday",
       "updateTypes": ["lockFileMaintenance"]
     }
   ],
@@ -59,7 +59,7 @@
   "postUpdateOptions": ["yarnDedupeHighest"],
   "prConcurrentLimit": 2,
   "prNotPendingHours": 1,
-  "schedule": "before 7am on every weekday",
+  "schedule": "before 6:00 am on Monday",
   "semanticCommitScope": "",
   "semanticCommitType": "deps",
   "separateMajorMinor": false
