--- a/renovate.json5
+++ b/renovate.json5
@@ -15,74 +15,154 @@
   },
   "packageRules": [
     {
-      "depTypeList": ["dependencies"],
+      "matchDepTypes": ["dependencies"],
+      "matchManagers": ["npm"],
+
       "semanticCommitType": "fix"
     },
     {
-      "commitMessageExtra": "{{newValue}}",
-      "commitMessageTopic": "{{depName}}",
-      "matchManagers": ["buildkite", "npm", "nvm"]
+      "matchManagers": ["gomod"],
+
+      "digest": {
+        "commitMessageExtra": "",
+        "groupName": "gomod digests",
+        "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
+      },
+      "semanticCommitType": "fix"
     },
     {
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$"],
+      "matchManagers": ["buildkite", "gomod", "npm", "nvm"],
+
+      "commitMessageExtra": "{{newValue}}",
+      "commitMessageTopic": "{{depName}}"
+    },
+    {
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["patch", "minor"],
+      "matchPackageNames": ["@types/node"],
+      "matchUpdateTypes": ["major"],
+
       "enabled": false
     },
     {
-      "depTypeList": ["devDependencies"],
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major"],
-      "schedule": "after 3am and before 6am on Tuesday"
-    },
-    {
-      "depTypeList": ["peerDependencies"],
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
-      "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major"],
-      "schedule": "after 3am and before 6am on Tuesday"
-    },
-    {
+      "matchPackagePatterns": ["^@types/"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
+
+      "automerge": true,
       "commitMessageExtra": "",
+      "groupName": "npm definitely typed",
+      "prPriority": 99,
+      "recreateClosed": true,
+      "schedule": "before 3:00 am on Tuesday"
+    },
+    {
+      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
+      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
+      "matchDepTypes": ["devDependencies"],
+      "matchManagers": ["npm"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
+
+      "commitMessageExtra": "",
+      "groupName": "npm dev dependencies",
+      "recreateClosed": true,
+      "schedule": "after 3:00 am and before 6:00 am on Tuesday"
+    },
+    {
+      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
+      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
+      "matchDepTypes": ["peerDependencies"],
+      "matchManagers": ["npm"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
+
+      "commitMessageExtra": "",
+      "groupName": "npm peer dependencies",
+      "recreateClosed": true,
+      "schedule": "after 3:00 am and before 6:00 am on Tuesday"
+    },
+    {
       "excludePackagePatterns": ["^seek-jobs/", "^seek-oss/"],
+      "matchManagers": ["buildkite"],
+
+      "commitMessageExtra": "",
       "groupName": "buildkite plugins",
       "managerBranchPrefix": "",
-      "matchManagers": ["buildkite"],
       "recreateClosed": true,
-      "schedule": "after 3am and before 6am on Wednesday"
+      "schedule": "after 3:00 am and before 6:00 am on Wednesday"
     },
     {
+      "matchManagers": ["docker-compose", "dockerfile"],
+
       "commitMessageExtra": "",
       "group": {
         "commitMessageTopic": "{{groupName}}"
       },
       "groupName": "docker images",
-      "matchManagers": ["docker-compose", "dockerfile"],
       "recreateClosed": true,
-      "schedule": "after 3am and before 6am on Wednesday"
+      "schedule": "after 3:00 am and before 6:00 am on Wednesday"
     },
     {
       "matchPackageNames": ["braid-design-system", "sku", "skuba"],
       "matchPackagePatterns": ["^@?seek", "seek$"],
+
       "prPriority": 98,
-      "schedule": "after 3am and before 6am on every weekday"
+      "schedule": "after 3:00 am and before 6:00 am on every weekday"
     },
     {
-      "automerge": true,
-      "prPriority": 99,
-      "schedule": "before 3:00 am every 2 weeks on Wednesday",
-      "updateTypes": ["lockFileMaintenance"]
-    },
-    {
-      "automerge": true,
+      "matchDepTypes": ["dependencies"],
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["pin"],
+      "matchPackageNames": ["aws-sdk"],
+      "matchPackagePatterns": ["^@aws-sdk/"],
+
+      "commitMessageExtra": "",
+      "groupName": "aws-sdk",
+      "recreateClosed": true,
+      "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "matchManagers": ["npm"],
+      "matchPackageNames": [
+        "@seek/candidate-data-contracts",
+        "@seek/ie-shared-types",
+        "@seek/indie-cardib-types"
+      ],
+
+      "automerge": true,
+      "schedule": "before 3:00 am on every weekday"
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "matchPackageNames": ["sku", "skuba"],
+      "matchUpdateTypes": ["patch"],
+
+      "automerge": true
+    },
+    {
+      "excludePackageNames": [],
+
+      "extends": ["group:monorepos"],
+      "recreateClosed": true
+    },
+    {
+      "matchPackageNames": ["react-relay"],
+      "matchPackagePatterns": ["^relay-"],
+
+      "groupName": "relay",
+      "recreateClosed": true
+    },
+    {
+      "matchUpdateTypes": ["lockFileMaintenance"],
+
+      "automerge": true,
       "prPriority": 99,
-      "schedule": "before 3am on every weekday"
+      "schedule": "before 3:00 am every 2 weeks on Wednesday"
+    },
+    {
+      "matchUpdateTypes": ["pin"],
+
+      "automerge": true,
+      "prPriority": 99,
+      "schedule": "before 3:00 am on every weekday"
     }
   ],
   "commitMessageAction": "",
@@ -92,7 +172,7 @@
   "prConcurrentLimit": 3,
   "prNotPendingHours": 1,
   "rangeStrategy": "auto",
-  "schedule": "after 3am and before 6am on Monday and Friday",
+  "schedule": "after 3:00 am and before 6:00 am on Monday and Friday",
   "semanticCommitScope": "",
   "semanticCommitType": "deps"
 }
