--- a/renovate.json5
+++ b/renovate.json5
@@ -8,7 +8,8 @@
     ":updateNotScheduled",
     "preview:buildkite",
     "preview:dockerCompose",
-    "docker:disableMajor"
+    "docker:disableMajor",
+    "group:monorepos"
   ],
   "lockFileMaintenance": {
     "enabled": true
@@ -21,26 +22,50 @@
       "semanticCommitType": "fix"
     },
     {
-      "matchManagers": ["buildkite", "npm", "nvm"],
+      "matchManagers": ["gomod"],
+
+      "digest": {
+        "commitMessageExtra": "",
+        "groupName": "gomod digests",
+        "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
+      },
+      "semanticCommitType": "fix"
+    },
+    {
+      "matchManagers": ["buildkite", "gomod", "npm", "nvm"],
 
       "commitMessageExtra": "{{newValue}}",
       "commitMessageTopic": "{{depName}}"
     },
     {
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$"],
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["patch", "minor"],
+      "matchPackageNames": ["@types/node"],
+      "matchUpdateTypes": ["major"],
 
       "enabled": false
+    },
+    {
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["^@types/"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
+
+      "automerge": true,
+      "commitMessageExtra": "",
+      "groupName": "npm definitely typed",
+      "prPriority": 99,
+      "recreateClosed": true,
+      "schedule": "before 3:00 am on Tuesday"
     },
     {
       "excludePackageNames": ["braid-design-system", "sku", "skuba"],
       "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
       "matchDepTypes": ["devDependencies"],
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
 
+      "commitMessageExtra": "",
+      "groupName": "npm dev dependencies",
+      "recreateClosed": true,
       "schedule": "after 3:00 am and before 6:00 am on Tuesday"
     },
     {
@@ -48,8 +73,11 @@
       "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
       "matchDepTypes": ["peerDependencies"],
       "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major"],
+      "matchUpdateTypes": ["major", "minor", "patch"],
 
+      "commitMessageExtra": "",
+      "groupName": "npm peer dependencies",
+      "recreateClosed": true,
       "schedule": "after 3:00 am and before 6:00 am on Tuesday"
     },
     {
@@ -79,6 +107,43 @@
 
       "prPriority": 98,
       "schedule": "after 3:00 am and before 6:00 am every weekday"
+    },
+    {
+      "matchDepTypes": ["dependencies"],
+      "matchManagers": ["npm"],
+      "matchPackageNames": ["aws-sdk"],
+      "matchPackagePatterns": ["^@aws-sdk/"],
+
+      "commitMessageExtra": "",
+      "groupName": "aws-sdk",
+      "recreateClosed": true,
+      "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "matchManagers": ["npm"],
+      "matchPackageNames": [
+        "@seek/candidate-data-contracts",
+        "@seek/ie-shared-types",
+        "@seek/indie-cardib-types"
+      ],
+
+      "automerge": true,
+      "schedule": "before 3:00 am every weekday"
+    },
+    {
+      "matchDepTypes": ["devDependencies"],
+      "matchPackageNames": ["sku", "skuba"],
+      "matchUpdateTypes": ["patch"],
+
+      "automerge": true
+    },
+    {
+      "matchPackageNames": ["react-relay"],
+      "matchPackagePatterns": ["^relay-"],
+
+      "groupName": "relay",
+      "recreateClosed": true
     },
     {
       "matchUpdateTypes": ["lockFileMaintenance"],
