--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "apollo-server-testing": "2.4.0",
     "gaxios": "4.2.0",
     "graphql": "14.0.0",
-    "lodash.memoize": "4.1.1"
+    "lodash.memoize": "4.1.1",
+    "remark-parse": "4.0.0",
+    "remark-stringify": "4.0.0"
   },
   "description": "Renovate testbed",
   "devDependencies": {
