--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "apollo-server-testing": "2.4.0",
     "gaxios": "4.2.0",
     "graphql": "14.0.0",
+    "jest-diff": "26.6.2",
     "lodash.memoize": "4.1.1",
     "remark-parse": "4.0.0",
     "remark-stringify": "4.0.0"
@@ -14,6 +15,7 @@
     "@graphql-inspector/diff-command": "2.4.0",
     "@graphql-inspector/loaders": "2.4.0",
     "@graphql-inspector/url-loader": "2.4.0",
+    "jest": "26.6.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "skuba": "3.10.0",
