--- a/renovate.json5
+++ b/renovate.json5
@@ -1,171 +1,13 @@
 {
-  "extends": [
-    ":prHourlyLimit4",
-    ":rebaseStalePrs",
-    ":renovatePrefix",
-    ":semanticCommits",
-    ":timezone(Australia/Melbourne)",
-    ":updateNotScheduled",
-    "preview:buildkite",
-    "preview:dockerCompose",
-    "docker:disableMajor",
-    "group:monorepos"
+  extends: ['github>seek-oss/rynovate:non-critical'],
+  packageRules: [
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['skuba'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      automerge: true,
+      groupName: null,
+    },
   ],
-  "lockFileMaintenance": {
-    "enabled": true
-  },
-  "packageRules": [
-    {
-      "matchDepTypes": ["dependencies"],
-      "matchManagers": ["npm"],
-
-      "semanticCommitType": "fix"
-    },
-    {
-      "matchManagers": ["gomod"],
-
-      "digest": {
-        "commitMessageExtra": "",
-        "groupName": "gomod digests",
-        "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
-      },
-      "semanticCommitType": "fix"
-    },
-    {
-      "matchManagers": ["buildkite", "gomod", "npm", "nvm"],
-
-      "commitMessageExtra": "{{newValue}}",
-      "commitMessageTopic": "{{depName}}"
-    },
-    {
-      "matchManagers": ["npm"],
-      "matchPackageNames": ["@types/node"],
-      "matchUpdateTypes": ["major"],
-
-      "enabled": false
-    },
-    {
-      "matchManagers": ["npm"],
-      "matchPackagePatterns": ["^@types/"],
-      "matchUpdateTypes": ["major", "minor", "patch"],
-
-      "automerge": true,
-      "commitMessageExtra": "",
-      "groupName": "npm definitely typed",
-      "prPriority": 99,
-      "recreateClosed": true,
-      "schedule": "before 3:00 am on Tuesday"
-    },
-    {
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
-      "matchDepTypes": ["devDependencies"],
-      "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major", "minor", "patch"],
-
-      "commitMessageExtra": "",
-      "groupName": "npm dev dependencies",
-      "recreateClosed": true,
-      "schedule": "after 3:00 am and before 6:00 am on Tuesday"
-    },
-    {
-      "excludePackageNames": ["braid-design-system", "sku", "skuba"],
-      "excludePackagePatterns": ["^@?seek", "seek$", "^@types/"],
-      "matchDepTypes": ["peerDependencies"],
-      "matchManagers": ["npm"],
-      "matchUpdateTypes": ["major", "minor", "patch"],
-
-      "commitMessageExtra": "",
-      "groupName": "npm peer dependencies",
-      "recreateClosed": true,
-      "schedule": "after 3:00 am and before 6:00 am on Tuesday"
-    },
-    {
-      "excludePackagePatterns": ["^seek-jobs/", "^seek-oss/"],
-      "matchManagers": ["buildkite"],
-
-      "additionalBranchPrefix": "",
-      "commitMessageExtra": "",
-      "groupName": "buildkite plugins",
-      "recreateClosed": true,
-      "schedule": "after 3:00 am and before 6:00 am on Wednesday"
-    },
-    {
-      "matchManagers": ["docker-compose", "dockerfile"],
-
-      "commitMessageExtra": "",
-      "group": {
-        "commitMessageTopic": "{{groupName}}"
-      },
-      "groupName": "docker images",
-      "recreateClosed": true,
-      "schedule": "after 3:00 am and before 6:00 am on Wednesday"
-    },
-    {
-      "matchPackageNames": ["braid-design-system", "sku", "skuba"],
-      "matchPackagePatterns": ["^@?seek", "seek$"],
-
-      "prPriority": 98,
-      "schedule": "after 3:00 am and before 6:00 am every weekday"
-    },
-    {
-      "matchDepTypes": ["dependencies"],
-      "matchManagers": ["npm"],
-      "matchPackageNames": ["aws-sdk"],
-      "matchPackagePatterns": ["^@aws-sdk/"],
-
-      "commitMessageExtra": "",
-      "groupName": "aws-sdk",
-      "recreateClosed": true,
-      "schedule": "after 3:00 am and before 6:00 am on the first day of the month"
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchManagers": ["npm"],
-      "matchPackageNames": [
-        "@seek/candidate-data-contracts",
-        "@seek/ie-shared-types",
-        "@seek/indie-cardib-types"
-      ],
-
-      "automerge": true,
-      "schedule": "before 3:00 am every weekday"
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchPackageNames": ["sku", "skuba"],
-      "matchUpdateTypes": ["patch"],
-
-      "automerge": true
-    },
-    {
-      "matchPackageNames": ["react-relay"],
-      "matchPackagePatterns": ["^relay-"],
-
-      "groupName": "relay",
-      "recreateClosed": true
-    },
-    {
-      "matchUpdateTypes": ["lockFileMaintenance"],
-
-      "automerge": true,
-      "prPriority": 99,
-      "schedule": "before 3:00 am every 2 weeks on Wednesday"
-    },
-    {
-      "matchUpdateTypes": ["pin"],
-
-      "automerge": true,
-      "prPriority": 99,
-      "schedule": "before 3:00 am every weekday"
-    }
-  ],
-  "commitMessageAction": "",
-  "postUpdateOptions": ["yarnDedupeHighest"],
-  "prConcurrentLimit": 3,
-  "prNotPendingHours": 1,
-  "rangeStrategy": "auto",
-  "schedule": "after 3:00 am and before 6:00 am on Monday and Friday",
-  "semanticCommitScope": "",
-  "semanticCommitType": "deps"
 }
