--- a/renovate.json5
+++ b/renovate.json5
@@ -1,27 +1,11 @@
 {
-  lockFileMaintenance: {
-    enabled: true,
-  },
+  extends: ['github>seek-oss/rynovate'],
   packageRules: [
     {
-      matchUpdateTypes: [
-        'major',
-        'minor',
-        'patch',
-        'pin',
-        'digest',
-        'rollback',
-        'bump',
-      ],
-      enabled: false,
-    },
-    {
-      matchUpdateTypes: ['lockFileMaintenance'],
-      automerge: true,
-    },
-    {
-      matchUpdateTypes: ['lockFileMaintenance'],
-      schedule: 'before 3:00 am every 2 weeks on Wednesday',
+      matchManagers: ['npm'],
+      matchPackageNames: ['apollo-server-plugin-base', 'apollo-server-types'],
+
+      groupName: 'apollo-server',
     },
   ],
 }
