--- a/package.json
+++ b/package.json
@@ -1,24 +1,11 @@
 {
   "dependencies": {
-    "aws-sdk": "2.0.0",
-    "apollo-server-koa": "2.4.0",
-    "gaxios": "4.2.0",
-    "graphql": "14.0.0",
-    "jest-diff": "26.6.2",
-    "lodash.memoize": "4.1.1",
-    "remark-parse": "4.0.0",
-    "remark-stringify": "4.0.0"
+    "apollo-datasource": "3.3.0",
+    "apollo-datasource-rest": "3.5.0",
+    "apollo-server-env": "4.2.0",
+    "apollo-server-koa": "3.6.1",
+    "apollo-server-plugin-base": "3.5.0",
+    "apollo-server-types": "3.5.0"
   },
-  "description": "Renovate testbed",
-  "devDependencies": {
-    "@graphql-inspector/diff-command": "2.4.0",
-    "@graphql-inspector/loaders": "2.4.0",
-    "@graphql-inspector/url-loader": "2.4.0",
-    "apollo-server-testing": "2.4.0",
-    "jest": "26.6.2",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "skuba": "3.10.0",
-    "ts-node-dev": "1.0.0-pre.63"
-  }
+  "description": "Renovate testbed"
 }
