--- a/renovate.json5
+++ b/renovate.json5
@@ -1,3 +1,11 @@
 {
-  extends: ['github>seek-oss/rynovate', 'group:allApollographql'],
+  extends: ['github>seek-oss/rynovate'],
+  packageRules: [
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['apollo-server-plugin-base', 'apollo-server-types'],
+
+      groupName: 'apollo-server monorepo',
+    },
+  ],
 }
